Fixes vertical centering for institutions logo that are too wide

--- a/web-app/css/digivol-custom.css
+++ b/web-app/css/digivol-custom.css
@@ -91,7 +91,7 @@ h2.heading > div.subheading {
 
 .thumbnail.institution div.logo-centre {
     width: 100%;
-    height: 200px;
+    height: 225px;
     padding-top: 25px;
     text-align: center;
     display: table;
